# honeycomb

./: Cargo.toml  README.md  build.rs
proto/: communication.proto  dance.proto
src/: error.rs  lib.rs  main.rs
src/beehive/: client.rs  server.rs
src/manage/: communication.rs  manage.rs  mod.rs
src/queen/: queen.rs
